# C_C_plua_plus_progrumming_Technopark

./: README.md
IZ_1/: CMakeLists.txt  IZ_1.c  IZ_1.h  main.c  makefile
IZ_1/IZ_1/: CMakeLists.txt  IZ_1.c  IZ_1.h
IZ_1/linters/: run.sh
IZ_1/tests/: CMakeLists.txt  test.cpp
